--- a/index.html
+++ b/index.html
@@ -685,10 +685,20 @@
 
 
                 <div class="center_block">
-                    <div class="icon_center">
-                        <!-- <div class="icon_doroga_left"><img src="./image/doroga.jpeg" alt="doroga"></div> -->
-                        <!-- <div class="icon_doroga_right"><img src="./image/doroga.jpeg" alt="doroga"></div> -->
+                    <div class="block_dorogi">
+                        <div class="punktir"></div>
                     </div>
+                    <div class="bottom_doroga">
+                        <div class="horizont"></div>
+                    </div>
+                    <div class="block_dorogi">
+                        <div class="punktir"></div>
+                    </div>
+
+                    <!-- <div class="icon_center">
+                        <div class="icon_doroga_left"><img src="./image/doroga.jpeg" alt="doroga"></div>
+                        <div class="icon_doroga_right"><img src="./image/doroga.jpeg" alt="doroga"></div>
+                    </div> -->
                     <!-- <div class="icon_center">
                         <div class="icon_doroga_left"><img src="./image/doroga.jpeg" alt="doroga"></div>
                         <div class="icon_doroga_right"><img src="./image/doroga.jpeg" alt="doroga"></div>
