--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="fon_FORM">
-            <form class="form" action="" method="get" onsubmit="return false">
+            <form class="form" action="" method="POST" onsubmit="return false">
                 <span>Ваше имя:</span>
                 <input type="text" name="name" minlength="3" maxlength="20" required>
 
@@ -586,7 +586,7 @@
     </section>
 
     <!-- Как мы работаем_______________ -->
-    <section>
+    <section class="sectionWork">
         <div class="work">
             <h2>Как мы работаем</h2>
 
